--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <!-- <link href="css/resume.min.css" rel="stylesheet"> -->
+    <!-- One completed minify resume.css and use above link-->
     <link href="css/resume.css" rel="stylesheet">
 
   </head>
@@ -162,27 +163,55 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Scala Certification</h3>
+              <div class="subheading mb-3">Siddi Softec – Aditya Prabhakara</div>
+              <span class="side-heading"></span>
+              <div></div>
+              <p>Corporate training provided by Aptean from Siddi Softec, with hands on in Play/Scala MVC, Akka/Kafka projects.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">April 2017 - 1 Month</span>
             </div>
           </div>
-
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Bachelor in Technology</h3>
+              <div class="subheading mb-3">Heritage Institute of Technology</div>
+              <p>Certified by Maulana Abul Kalam Azad University of Technology formerly known as <b>WBUT</b>, I undergraduated in <b>Electronics and Communication Engineering</b>, with <b>8.12 DGPA</b> and 
+              got the opportunity to work with <b>Jadavpur University</b> professor for the final year project described below.</p>
+              <div class="project">
+                <h4>Coronary Artery Centre Line Extraction | <span class="side-heading">Image Processing</span></h4>
+                <p class="project-description">University Final Year Project on Image Processing using MATLAB. Thesis on above, implementing a modified algorithm based on Region Growing technique to detect the center line of a coronary artery from a gray scale x-ray image.</p>
+              </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">August 2011 – June 2015</span>
             </div>
           </div>
-
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Higher Secondary School Examination</h3>
+              <div class="subheading mb-3">Kerala Samajam Model School</div>
+              <span class="side-heading"></span>
+              <div></div>
+              <p>Board:  Indian School Certificate <b>(ISC) - 84%</b>.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2010</span>
+            </div>
+          </div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Secondary School Examination</h3>
+              <div class="subheading mb-3">Kerala Samajam Model School</div>
+              <span class="side-heading"></span>
+              <div></div>
+              <p>Board:  Indian Certificate of Secondary Education <b>(ICSE) - 87%</b>.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2010</span>
+            </div>
+          </div>         
         </div>
       </section>
 
@@ -191,15 +220,15 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="freelance">
         <div class="my-auto">
           <h2 class="mb-5">Freelance</h2>
-
+          
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">AI - Programmer</h3>
-              <div class="subheading mb-3">Decisive.ai</div>
-              <p>Being the Solo Core AI Programmer in a Startup, my responsibilities spread from designing, developing, maintaining a distributed platform which empowers AI to learn and showcase its Intelligence, using RL, DL, NN algorithm implementations. Tech stack involves(but not limited to) Scala-Java ecosystem (Scala, Akka, DL4J, Play etc.).</p>
+              <h3 class="mb-0">Subject Matter Expert - Computer Science Engineering</h3>
+              <div class="subheading mb-3">Chegg India</div>
+              <p>Chegg Inc. a US Education Giant, a leading provider of online homework helps for college and high school students like Harvard and prestigious college from all over the world. As a subject Expert work was to help Chegg registered students with their assignments and projects.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2017 - Present</span>
+              <span class="text-primary">November 2016 - December 2017</span>
             </div>
           </div>
 
@@ -318,29 +347,29 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Aptean GEM (Go The Extra Mile) Award | <span class="side-heading">October 2017</span></h5>
-              <p>Appreciated for my Proactive work which helped company meet its goal for Vantage and also for the research work at Aptean Research Lab which added business value to Aptean existing product.</p>
+              <p>Appreciated for my <b>Proactive Work</b> which helped company meet its goal for Vantage and also for the <b>research work at Aptean Research Lab</b> which added business value to Aptean existing product.</p>
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Microsoft Certified Solutions Developer (MCSD) | <span class="side-heading">September 2016</span></h5>
-              <p>Certified in “Programming in HTML5 with JavaScript and CSS3” (Exam Code 70-480) conducted by Microsoft, by scoring 84.2 percentile.</p>
+              <p>Certified in <b>“Programming in HTML5 with JavaScript and CSS3”</b> (Exam Code 70-480) conducted by Microsoft, by scoring <b>85.7%</b>.</p>
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Microsoft Technology Associate (MTA) | <span class="side-heading">June 2014</span></h5>
-              <p>Certified in “Database Administration Fundamentals” (Exam Code 98 – 364) conducted by Microsoft, by scoring 84.2 percentile.</p>
+              <p>Certified in <b>“Database Administration Fundamentals”</b> (Exam Code 98 – 364) conducted by Microsoft, by scoring <b>84.2 %</b>.</p>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Microsoft Office Specialist (MOS) | <span class="side-heading">June 2014</span></h5>
-              <p>Certified in “Microsoft Office Word 2010” (Exam Code 77-881: MOS) - 81.5 percentile and “Microsoft Office PowerPoint 2010” (Exam Code 77-883: MOS) - 89.3 percentile
+              <p>Certified in <b>“Microsoft Office Word 2010”</b> (Exam Code 77-881: MOS) by scoring <b>81.5%</b> and <b>“Microsoft Office PowerPoint 2010”</b> (Exam Code 77-883: MOS) by scoring <b>89.3%</b>
                 conducted by Microsoft.</p>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Exorsa v2.0 | <span class="side-heading">September 2014</span></h5>
               <p>Intra WBUT University online fest conducted by mywbut.com, participants coming from colleges all over west Bengal.
                 <ul>
-                  <li>Bagged 3<sup>rd</sup> position in “FAST PRESENTER” online power point presentation to be submitted in 30 minutes.</li>
-                  <li>Bagged 7<sup>th</sup> and 1<sup>th</sup> position in “WWWIZARD”, a static web design competition.</li>
+                  <li>Bagged <b>3<sup>rd</sup></b> position in <b>“FAST PRESENTER”</b> online power point presentation to be submitted in 30 minutes.</li>
+                  <li>Bagged <b>7<sup>th</sup></b> and <b>9<sup>th</sup></b> position in <b>“WWWIZARD”</b>, a static web design competition.</li>
                 </ul>
               </p>
           </ul>
