Completed Freelance section.

--- a/index.html
+++ b/index.html
@@ -224,51 +224,53 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Subject Matter Expert - Computer Science Engineering</h3>
-              <div class="subheading mb-3">Chegg India</div>
+              <div class="subheading mb-3">@ Chegg</div>
               <p>Chegg Inc. a US Education Giant, a leading provider of online homework helps for college and high school students like Harvard and prestigious college from all over the world. As a subject Expert work was to help Chegg registered students with their assignments and projects.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2016 - December 2017</span>
             </div>
           </div>
-
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Product Developer</h3>
-              <div class="subheading mb-3">Aptean india pvt. ltd.</div>
-              <p>Joined as a Full Stack Web Developer for product Vantage gained expertise on multi-tenant architecture built on Scala-Ecosystem Technology Stack.</p>
-              <div class="project">
-                <h4 class="">Vantage | <span class="project-type">CMS-CRM Web Application Product.</span></h4>
-                <p class="project-description">Being First member of a newly procured product by the company, my responsibilities were to acquire product knowledge to lead upcoming members of the team, Bug fixes, Develop new enhancements, Contribution in product Migration and Architectural Enhancement Prototype, Refactoring old Modules, implementing Unit-testing framework.</p>
-              </div>
+              <h3 class="mb-0">Online Shopping Portal with Secure Gateway</h3>
+              <p>E-Commerce Shopping web application with encrypted secure payment by implementing RSA algorithm.</p>
+              <p><b>Technology Used:</b> Java/JEE (HTML5, CSS3, JavaScript, JSP, Servlet) and MySQL.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">November 2016 - November 2017</span>
+              <span class="text-primary">August 2014 - February 2015</span>
             </div>
           </div>
-
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Immigration System</h3>
+              <p>Web Application resembling Indian Bureau of Immigration (BoI), where immigrants can apply for application and learn about Indian law and culture.</p>
+              <p><b>Technology Used:</b> HTML5, CSS3, JavaScript, PHP and MySQL.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">January 2014 - August 2014</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <h3 class="mb-0">School Management System</h3>
+              <p>School Data Management system where parents can check for children’s report and school activities as well as teachers can update or create activities.</p>
+              <p><b>Technology Used:</b> HTML5, CSS3, JavaScript, PHP and MySQL.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">In 2014</span>
             </div>
           </div>
-
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Electronic Bill Payment System</h3>
+              <p>Windows Application for customers to check and pay electricity bills and also with admin UI for admin to update and create electricity bills.</p>
+              <p><b>Technology Used:</b> Vb6, visual studio 2008 and MS Access.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">In 2013</span>
+            </div>
+          </div>
         </div>
 
       </section>
