Completed Ai-experience and Past-Experience sections.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#ai-experience">AI-Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#past-experience">Past Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -68,11 +71,14 @@
           <h1 class="mb-0">Rohit
             <span class="text-primary">Nandi</span>
           </h1>
-          <div class="subheading mb-5">Hinjewadi, Pune - 411057·
+          <div class="subheading mb-5">Hinjawadi, Pune - 411057·
             <a href="mailto:rohitnandi12@gmail.com">rohitnandi12@gmail.com</a>
           </div>
-          <p class="lead mb-5">Being a hardworking, upbeat, enthusiastic learner, proactive and self-motivated team player, I aspire to occupy a reasonable and challenging position in the software field. 
-            Code, Create, Celebrate is my Mantra.<br>Want to work together?<br>I’d love to hear from you :-)</p>
+          <h4>Hello,</h4>
+          <p class="lead mb-5">I am an <b>AI seeker</b>, evolving everyday by creating applications and side projects in the field of AI. A generalist, polyglot software developer, not delimited by any programming language or framework.  Acclaimed for being proactive and self-motivated team player. 
+            I aspire to occupy a reasonable and challenging position in the domain of AI. Code, Create, Celebrate is my Mantra.
+            <br>&emsp; Want to work together?I’d love to hear from you :-)
+          </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/rohit-nandi-261523a7/">
               <i class="fab fa-linkedin-in"></i>
@@ -83,74 +89,184 @@
             <!-- <a href="#">
               <i class="fab fa-twitter"></i>
             </a>
-            -->
             <a href="https://www.facebook.com/roh.rocks">
               <i class="fab fa-facebook-f"></i>
             </a>
+            -->
           </div>
         </div>
       </section>
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="ai-experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">AI-Experience</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">AI - Programmer</h3>
-              <div class="subheading mb-3">Decisive.ai</div>
-              <p>Being the Solo Core AI Programmer in a Startup, my responsibilities spread from collaborating with CEO and research team to design, develope, maintain a distributed platform which empowers AI to learn and showcase its Intelligence, using RL, DL, NN algorithm implementations. Tech stack involves(but not limited to) Scala-Java ecosystem (Scala, Akka, DL4J, Play etc.).</p>
+              <div class="subheading mb-3">@ Decisive.ai</div>
+              <p>As a <b>Core AI Programmer</b> in a Startup, my responsibilities spread from designing, developing, maintaining a distributed platform which empowers AI to learn and showcase its Intelligence, using DL-NN algorithm implementations for the Gaming Industry. 
+                <br>&emsp;Payroll Company Sarathi Softech Pvt. Ltd.
+              </p>
+              <div class="project">
+                <h4>> Major Contribution</h4>
+                <ul>
+                  <li>Integration of database module.</li>
+                  <li>Incorporated SBT in the project.</li>
+                  <li>Implemented a Dashboard which helps in monitoring Agent training session progress and learning curve.</li>
+                  <li>Implemented distributed multi server processing using Akka.</li>
+                  <li>Implement Neural Networks using Dl4j.</li>
+                  <li>Refactoring project structure to be more modular, functional.</li>
+                  <li>Training Agents, finding hyper-parameters, creating reports and analysis.</li>
+                  <li>Taking interviews of upcoming candidates.</li>
+                </ul>
+                <p><b>Technologies used:</b> Scala-Java ecosystem (Akka, Play, DL4J, nd4j etc.), JavaScript Bootstrap, Chart.js, PostgreSql, SBT, Octave.</p>
+              </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2017 - Present</span>
+              <span class="text-primary">December 2017 – Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Product Developer</h3>
-              <div class="subheading mb-3">Aptean india pvt. ltd.</div>
+              <h3 class="mb-0">Research Associate</h3>
+              <div class="subheading mb-3">@ Aptean India pvt. Ltd.</div>
+              <p>At a Hackathon conducted by ARL (Aptean Research Lab), I proposed a use case of Recommendation System for product Vantage and prototype was built 
+                for the same.  Research on the same was done for two more of Aptean existing products Knova and CoreTrac during my 2 months tenure with ARL. 
+              </p>
+              <div class="project">
+                <h4>Project | <span class="side-heading">Recommendation System</span></h4>
+                <ul>
+                  <li>Research of Various Content based and Collaborative based approaches.</li>
+                  <li>Analyzing 43 products of Aptean, gathering use cases of recommendation engine as an application in those products.</li>
+                  <li>Collaborating with various teams to gather data from their respective product, understanding their domain and scope of recommendation engine in them.</li>
+                  <li>Creating POC for the product Vantage.</li>
+                  <li>Creating report and presenting scope of Recommendation engine to Knova and CoreTrac teams.</li>
+                </ul>
+                <p><b>Technologies used:</b> Python 3.x, Jupyter notebook.</p>
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2017 – October 2017</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Side Projects</h3>
+              <div class="project">
+                <h4 style="padding-top:20px;">Email Clustering | <a href="https://github.com/rohitnandi12/EmailClustering">Github Link</a></h4>
+                <p>To resolve the dump of emails in my Gmail inbox, unsatisfied with the limited number of labels Gmail categorize data I had this idea to gather insight from the emails 
+                  in my inbox and categorizing them to more labels. Github Link</p>
+                <ul>
+                  <li>Using Gmail API to gather emails to a .csv format dataset – Total of 37176 emails.</li>
+                  <li>Analyzing the problem to be Unsupervised Clustering problem.</li>
+                  <li>Preprocessing and Vectorizing using sklearn Tf-Idf.</li>
+                  <li>K-means to cluster the data.</li>
+                </ul>
+                <p><b>TODO:</b>Connecting the insight gathered from clustering with chrome extension to view the mails according to the labels clustered.</p>
+                <p><b>Technologies used:</b> Python 3.x, Gmail-API, pandas, sklearn, matplotlib.</p>
+              </div>
+              <div class="project">
+                <h4 style="padding-top:20px;">Image Clustering</h4>
+                <p>To resolve my overgrowing pictures taken from phone, watsapp and other sources, I am developing this image 
+                  clustering app, which is going to group the similar images into a folder.<b>Ongoing!</b></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <hr class="m-0">
+  
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="past-experience">
+        <div class="my-auto">
+          <h2 class="mb-5">Full Stack Web-Developer Experience</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Engineer, Development</h3>
+              <div class="subheading mb-3">@ Aptean India pvt. Ltd.</div>
               <p>Joined as a Full Stack Web Developer for product Vantage gained expertise on multi-tenant architecture built on Scala-Ecosystem Technology Stack.</p>
               <div class="project">
                 <h4>Vantage | <span class="side-heading">CMS-CRM Web Application Product</span></h4>
-                <p class="project-description">Being First member of a newly procured product by the company, my responsibilities were to acquire product knowledge to lead upcoming members of the team, Bug fixes, Develop new enhancements, Contribution in product Migration and Architectural Enhancement Prototype, Refactoring old Modules, implementing Unit-testing framework.</p>
+                <p>Being the 1<sup>st</sup> member in India, of a newly procured product by the company, my responsibilities were to acquire product knowledge to lead upcoming members of the team, Bug fixes, Develop new enhancements, Contribution in product Migration and Architectural 
+                  Enhancement Prototype, Refactoring old Modules, implementing Unit-testing framework.
+                </p>
+                <p><b>Most valuable contribution</b> was revamping the Storage module giving it a new look 
+                    (something similar to Google Drive) powered by a Rest API, which enhanced the module performance by making it faster and crash-free.
+                </p>
+                <p><b>Technologies Used : </b>Scala, Play-Scala, SBT, Akka/Kafka, PostgreSql, Slick, Sqitch, Bootstrap, JQuery, UI Markup (HTML5, CSS3, JavaScript), JSON, GIT.</p>
+                <p><b>Tools Used : </b>IntelliJ Idea, PG-Admin, Nix-OS</p>
               </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">November 2016 – December 2017</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">System Engineer</h3>
+              <div class="subheading mb-3">@ Infosys Ltd.</div>
+              <p>Joined as a Fresher, went through a stringent training at Infosys Mysore. Outperformed the peer, becoming the Top Performer by consistently excelling in a series 8 exams. Gained technical experience on technologies like Python, Oracle DB 9i/10g, Java 8, JEE, JSF, Hibernate, Web-Tech (HTML5, CSS3 and JavaScript), jQuery, JUNIT-Mockito, Ant.</p>
               <div class="project">
-                <h4>ARL-Aptean Research Lab | <span class="side-heading"> Recommendation System</span></h4>
-                <p class="project-description">At a Hackathon conducted by ARL, proposed use case of Recommendation System in product Vantage and Prototype was built for the same.  Prototype implementation of same for more two of Aptean other existing products Knova and CoreTrac was done in my 2 months tenure with ARL.
-                  <br><b>Technologies Used : </b> Scala, Play-Scala, SBT, Akka/Kafka,  PostgreSql, Slick, Sqitch, Bootstrap, JQuery, UI Markup (HTML5, CSS3, JavaScript), JSON, GIT.
+                <h4>E-Flight | <span class="side-heading">Business Web Application</span></h4>
+                <p>Worked as a Full Stack Developer enhancing the existing Eflight application by adding new client requirements, bug fixing in existing modules for the client Bristow Group Inc.</p>
+                <p><b>Technologies Used : </b>Web-Tech (HTML5, CSS3, JavaScript), java 7, jQuery, Spring, Hibernate, MySql.</p>
+                <p><b>Tools Used : </b>Eclipse Indigo, Toad 7.7, Apache Tomcat 7.02, iReports 4.5.1, Mozilla Firebug, Tortoise SVN.</p>
+                <p style="margin-bottom:0px;">Also worked in 3 internal POC projects namely:</p>
+                <ul>
+                  <li><b>PyRecharge |</b> Console Application</li>
+                  <li><b>Electronic Payment System |</b> Web Application</li>
+                  <li><b>Food Coupon Vending System |</b> Web Application</li>
+                </ul>
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2015 - November 2016</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">INTERN</h3>
+              <div class="subheading mb-3">@ Globsyn Skills Development Pvt. Ltd.</div>
+              <p>Attended a 22 days practical training program on JEE Technologies like servlets, jdbc, JSP and also MySql and Apache Tomcat. It helped me in building a foundation of 
+                  knowledge in the field of Web Application Development, followed by a Corporate Project.</p>
+              <div class="project">
+                <h4>Online Examination Portal | <span class="side-heading">Web Application</span></h4>
+                <p>Worked as a Full Stack developer in a team of four, creating a recognized master piece of Web 
+                  Application ready to be operational by Educational Institution for facilitation of online examination.
+                </p>
+                <p><b>Technologies Used : </b>Java, JSP, J2EE, HTML5, CSS3, Javascript</p>
+                <p><b>Tools Used : </b>IntelliJ Idea, PG-Admin, Nix-OS</p>
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">June – July 2014</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">INTERN</h3>
+              <div class="subheading mb-3">@ Bharat Sanchar Nigam Ltd. (BSNL)</div>
+              <p>My first ever field working experience was at BSNL Telecom Factory, learning and collaborating with professional engineers with utmost domain knowledge.</p>
+              <div class="project">
+                <h4>Research on LAN and Network Management | <span class="side-heading">Networking</span></h4>
+                <p>Created a report on existing LAN network connectivity in the Factory, finding latency 
+                  causes in it and providing better network topological solution.
                 </p>
               </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">November 2016 - November 2017</span>
+              <span class="text-primary">January 2014</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
-
         </div>
 
       </section>
