--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <h4>Hello,</h4>
           <p class="lead mb-5">I am an <b>AI seeker</b>, evolving everyday by creating applications and side projects in the field of AI. A generalist, polyglot software developer, not delimited by any programming language or framework.  Acclaimed for being proactive and self-motivated team player. 
-            I aspire to occupy a reasonable and challenging position in the domain of AI. Code, Create, Celebrate is my Mantra.
+            <br>&emsp; I aspire to occupy a reasonable and challenging position in the domain of AI. Code, Create, Celebrate is my Mantra.
             <br>&emsp; Want to work together?I’d love to hear from you :-)
           </p>
           <div class="social-icons">
@@ -107,7 +107,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">AI - Programmer</h3>
               <div class="subheading mb-3">@ Decisive.ai</div>
-              <p>As a <b>Core AI Programmer</b> in a Startup, my responsibilities spread from designing, developing, maintaining a distributed platform which empowers AI to learn and showcase its Intelligence, using DL-NN algorithm implementations for the Gaming Industry. 
+              <p>As the <b>Core AI Programmer</b> in a Startup, my responsibilities spread from designing, developing, maintaining a distributed platform which empowers AI to learn and showcase its Intelligence, using DL-NN algorithm implementations for the Gaming Industry. 
                 <br>&emsp;Payroll Company Sarathi Softech Pvt. Ltd.
               </p>
               <div class="project">
@@ -168,7 +168,7 @@
                   <li>K-means to cluster the data.</li>
                 </ul>
                 <p><b>TODO:</b>Connecting the insight gathered from clustering with chrome extension to view the mails according to the labels clustered.</p>
-                <p><b>Technologies used:</b> Python 3.x, Gmail-API, pandas, sklearn, matplotlib.</p>
+                <p><b>Technologies used:</b> Python 3.x, Gmail-API, Google-Colab, pandas, sklearn, matplotlib.</p>
               </div>
               <div class="project">
                 <h4 style="padding-top:20px;">Image Clustering</h4>
