Everything completed except Skills section.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Rohit Nandi</span>
+        <span class="d-block d-lg-none">Rohit Nandi | <span style="color:white;"class="side-heading">AI-Programmer</span></span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -70,14 +70,15 @@
         <div class="my-auto">
           <h1 class="mb-0">Rohit
             <span class="text-primary">Nandi</span>
+            <span style="font-size: 0.5em;" class="side-heading">AI-Programmer</span>
           </h1>
           <div class="subheading mb-5">Hinjawadi, Pune - 411057·
             <a href="mailto:rohitnandi12@gmail.com">rohitnandi12@gmail.com</a>
           </div>
           <h4>Hello,</h4>
-          <p class="lead mb-5">I am an <b>AI seeker</b>, evolving everyday by creating applications and side projects in the field of AI. A generalist, polyglot software developer, not delimited by any programming language or framework.  Acclaimed for being proactive and self-motivated team player. 
+          <p class="lead mb-5">I am an <b>AI seeker</b>, evolving everyday by creating applications and side projects in the field of AI. A <b>generalist, polyglot software developer</b>, not delimited by any programming language or framework.  Acclaimed for being <b>proactive and self-motivated</b> team player. 
             <br>&emsp; I aspire to occupy a reasonable and challenging position in the domain of AI. Code, Create, Celebrate is my Mantra.
-            <br>&emsp; Want to work together?I’d love to hear from you :-)
+            <br>&emsp; Want to work together? I’d love to hear from you :-)
           </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/rohit-nandi-261523a7/">
@@ -160,7 +161,7 @@
               <div class="project">
                 <h4 style="padding-top:20px;">Email Clustering | <a href="https://github.com/rohitnandi12/EmailClustering">Github Link</a></h4>
                 <p>To resolve the dump of emails in my Gmail inbox, unsatisfied with the limited number of labels Gmail categorize data I had this idea to gather insight from the emails 
-                  in my inbox and categorizing them to more labels. Github Link</p>
+                  in my inbox and categorizing them to more labels. <a href="https://github.com/rohitnandi12/EmailClustering">Github Link</a>.</p>
                 <ul>
                   <li>Using Gmail API to gather emails to a .csv format dataset – Total of 37176 emails.</li>
                   <li>Analyzing the problem to be Unsupervised Clustering problem.</li>
@@ -193,7 +194,7 @@
               <p>Joined as a Full Stack Web Developer for product Vantage gained expertise on multi-tenant architecture built on Scala-Ecosystem Technology Stack.</p>
               <div class="project">
                 <h4>Vantage | <span class="side-heading">CMS-CRM Web Application Product</span></h4>
-                <p>Being the 1<sup>st</sup> member in India, of a newly procured product by the company, my responsibilities were to acquire product knowledge to lead upcoming members of the team, Bug fixes, Develop new enhancements, Contribution in product Migration and Architectural 
+                <p>Being the 1<sup>st</sup> member of Indian development team, of a newly procured product by the company, my responsibilities were to acquire product knowledge to lead upcoming members of the team, Bug fixes, Develop new enhancements, Contribution in product Migration and Architectural 
                   Enhancement Prototype, Refactoring old Modules, implementing Unit-testing framework.
                 </p>
                 <p><b>Most valuable contribution</b> was revamping the Storage module giving it a new look 
@@ -255,7 +256,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">INTERN</h3>
               <div class="subheading mb-3">@ Bharat Sanchar Nigam Ltd. (BSNL)</div>
-              <p>My first ever field working experience was at BSNL Telecom Factory, learning and collaborating with professional engineers with utmost domain knowledge.</p>
+              <p>My first on field working experience was at BSNL Telecom Factory, learning and collaborating with professional engineers with utmost domain knowledge.</p>
               <div class="project">
                 <h4>Research on LAN and Network Management | <span class="side-heading">Networking</span></h4>
                 <p>Created a report on existing LAN network connectivity in the Factory, finding latency 
@@ -283,7 +284,7 @@
               <div class="subheading mb-3">Siddi Softec – Aditya Prabhakara</div>
               <span class="side-heading"></span>
               <div></div>
-              <p>Corporate training provided by Aptean from Siddi Softec, with hands on in Play/Scala MVC, Akka/Kafka projects.</p>
+              <p>Corporate training at Aptean provided by Siddi Softec – Aditya Prabhakara, with hands on in Play/Scala MVC, Akka/Kafka projects.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2017 - 1 Month</span>
@@ -310,7 +311,7 @@
               <div class="subheading mb-3">Kerala Samajam Model School</div>
               <span class="side-heading"></span>
               <div></div>
-              <p>Board:  Indian School Certificate <b>(ISC) - 84%</b>.</p>
+              <p>Board:  Indian School Certificate <b>(ISC) - 84%</b>. Among </b>top 10</b> scorers from school.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2010</span>
@@ -325,7 +326,7 @@
               <p>Board:  Indian Certificate of Secondary Education <b>(ICSE) - 87%</b>.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2010</span>
+              <span class="text-primary">March 2008</span>
             </div>
           </div>         
         </div>
@@ -380,7 +381,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Electronic Bill Payment System</h3>
-              <p>Windows Application for customers to check and pay electricity bills and also with admin UI for admin to update and create electricity bills.</p>
+              <p>Windows Application for customers to check and pay electricity bills and also with admin UI for admin to update and generate electricity bills.</p>
               <p><b>Technology Used:</b> Vb6, visual studio 2008 and MS Access.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -465,7 +466,17 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Aptean GEM (Go The Extra Mile) Award | <span class="side-heading">October 2017</span></h5>
-              <p>Appreciated for my <b>Proactive Work</b> which helped company meet its goal for Vantage and also for the <b>research work at Aptean Research Lab</b> which added business value to Aptean existing product.</p>
+              <p>Appreciated for my <b>Proactive Work</b>, which helped the company meet its goal for the product Vantage and also for the <b>research work at Aptean Research Lab</b> which added business value to Aptean existing product.</p>
+            </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <h5>Infosys Top performer Trainee | <span class="side-heading">December 2015</span></h5>
+              <p>Stood as Top Performer (TPF) by scoring overall aggregate of <b>93%</b> during Infosys Training at Mysore, <b>1st in Java stream.</b></p>
+            </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <h5>Robotics | <span class="side-heading">2014</span></h5>
+              <p>Finalist in Inspiral-On (a manual robotics event) at Kshitij 2014 (IIT Kharagpur Technical Fest), where teams participated from all over the globe.</p>
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
@@ -475,7 +486,7 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Microsoft Technology Associate (MTA) | <span class="side-heading">June 2014</span></h5>
-              <p>Certified in <b>“Database Administration Fundamentals”</b> (Exam Code 98 – 364) conducted by Microsoft, by scoring <b>84.2 %</b>.</p>
+              <p>Certified in <b>“Database Administration Fundamentals”</b> (Exam Code 98 – 364) conducted by Microsoft, by scoring <b>84.2%</b>.</p>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Microsoft Office Specialist (MOS) | <span class="side-heading">June 2014</span></h5>
@@ -484,7 +495,7 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <h5>Exorsa v2.0 | <span class="side-heading">September 2014</span></h5>
-              <p>Intra WBUT University online fest conducted by mywbut.com, participants coming from colleges all over west Bengal.
+              <p><b>Intra WBUT University</b> online fest conducted by mywbut.com, participants enrolled from colleges all over west Bengal.
                 <ul>
                   <li>Bagged <b>3<sup>rd</sup></b> position in <b>“FAST PRESENTER”</b> online power point presentation to be submitted in 30 minutes.</li>
                   <li>Bagged <b>7<sup>th</sup></b> and <b>9<sup>th</sup></b> position in <b>“WWWIZARD”</b>, a static web design competition.</li>
