--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
+          <li class="nav-item">
+            <a href="pdf/Rohit_Nandi_Resume.pdf" class="nav-link js-scroll-trigger" href="#">Download Resume</a>
+          </li>        
         </ul>
       </div>
     </nav>
@@ -86,6 +89,9 @@
             </a>
             <a href="https://github.com/rohitnandi12">
               <i class="fab fa-github"></i>
+            </a>
+            <a href="pdf/Rohit_Nandi_Resume.pdf">
+              <i class="fa fa-download"></i>
             </a>
             <!-- <a href="#">
               <i class="fab fa-twitter"></i>
@@ -398,62 +404,35 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
-
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <h4>Polyglot | <span class="side-heading">General programming, DS and Algorithm</span></h4>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              <h5>Scala | <span class="side-text">Current language I use in development</span></h5></li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              <h5>Java | <span class="side-text">My first friend, who helped me explore the world of J2EE Web development, Android etc.</span></h5></li>
+            <li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              <h5>JavaScript | <span class="side-text">Helped me to Interact with the Internet</span></h5></li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              <h5>Python | <span class="side-text">My tool for machine learning</span></h5></li>
+            <li>
+          </ul>
+          <br />
+          <h4>My Colleagues | <span class="side-heading">As I work with them daily :-P</span></h4>
+          <p>Scala, Java, JavaScript, Play-Scala, Dl4j, SBT, Akka, PostgreSql, GIT, AWS-EC2 deployment, Python, pandas, numpy.</p>
+          <br />
+          <h4>In Past I have also worked with</h4>
+          <p>Slick Sqitch, Bootstrap, JQuery, UI Markup (HTML5, CSS3, JavaScript), JEE(Servlet, JSP/JSF, JDBC), Spring, Hibernate, JSF, Angular JS, Node JS, Android ADT, Toad-MySQL client, DATABASE (SQL Server 2008, Mysql, Oracle SQL), iReports, PHP, VB.Net, ASP.NET.</p>
+          <!-- <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="fab fa-css3-alt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-js-square"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-play"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
+          </ul> -->
         </div>
       </section>
 
